--- a/bin/src/main/resources/application.yml
+++ b/bin/src/main/resources/application.yml
@@ -26,8 +26,8 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: ryusystem100@gmail.com
-    password: narumi12
+    username: 
+    password: 
     properties:
       mail:
         smtp:
